# OTA

./: CMakeLists.txt  LINUX_OTA_ALIGN_NOTES.txt  README.txt  build_astro_mjpeg.sh  build_space_total_keep_source.sh  build_variants_ota.sh  flash_safe.sh  flash_variant.sh  gen_astro_mjpeg.py  idf_diff_snapshot.sh  release_ota.sh  sdkconfig  test  usb_port_check.sh  video.sh
MJPEG_OUT/: lunar_eclipse_240.mjpeg
components/comm_wifi/: Kconfig  comm_wifi.c
docs/: SOLAR_MJPEG.md
idf_snapshots/: self_test_report.txt
idf_snapshots/localA_20260221_170138/: hashes.sha256
idf_snapshots/localA_20260221_170138/files/: CMakeLists.txt  sdkconfig  sdkconfig.bak
idf_snapshots/localA_20260221_170138/meta/: environment.txt  git_info.txt  managed_components_dirs.txt  snapshot_info.txt
idf_snapshots/localB_20260221_170141/: hashes.sha256
idf_snapshots/localB_20260221_170141/meta/: snapshot_info.txt
idf_snapshots/local_20260221_170356/: hashes.sha256
idf_snapshots/local_20260221_170356/meta/: environment.txt  snapshot_info.txt
main/: CMakeLists.txt  app_main.c
main/audio/: audio_engine.c  audio_engine.h  audio_playback.c  audio_playback.h  sfx.c  sfx.h
main/core/: app.c  app_events.h  app_settings.c  app_settings.h  app_state.h
main/display/: font8x16.c  font8x16.h  st7789.c  st7789.h
main/drivers/: audio_out.c  audio_out.h  led_guard.c  led_guard.h
main/experiments/: exp_adc.c  exp_ball.c  exp_ble.c  exp_economy.c  exp_fraction.c  exp_game_chess.c  exp_game_chess_replay.c  exp_game_chess_tsumego.c  exp_game_chinese_chess.c  exp_game_dice_chess.c  exp_game_go13.c  exp_game_go13_replay.c  exp_game_go13_tsumego.c  exp_game_gomoku.c  exp_gpio.c  exp_history.c  exp_math24.c  exp_maze.c  exp_memory.c  exp_mic.c  exp_music.c  exp_numline.c  exp_pwm.c  exp_remote.c  exp_rocket.c  exp_seesaw.c  exp_semaforo.c  exp_snake.c  exp_solar.c  exp_speaker.c  exp_sudoku.c  exp_tof.c  exp_uart.c  exp_wifi_ap.c  exp_wifi_ota.c  exp_wifi_sta.c  experiment.h  experiments_registry.c  go_record_store.c  go_record_store.h
main/input/: drv_input_gpio_keys.c  drv_input_gpio_keys.h
main/net/: market_yahoo.c  market_yahoo.h  remote_web.c
main/stem/: electronic_menu.c
main/ui/: ui.h  ui_lcd.c
mjpeg_out/: space_total.mjpeg  space_total_natural_422.mjpeg  space_total_night_422.mjpeg
ota/: app-v1.2.3.sha256  app-v1.2.4.sha256  app-v1.2.5-2-g457e087-dirty.sha256  latest.sha256  targets.txt
ota/chess/: app-5aa3202-dirty.sha256  app-v1.2.8-t2.sha256  app-v1.2.8.sha256  latest.sha256
ota/dice/: app-5aa3202-dirty-t3.sha256  app-5aa3202-dirty.sha256  app-v1.2.8-t3.sha256  app-v1.2.8.sha256  latest.sha256
ota/go/: app-22395a1-dirty-t1.sha256  app-22395a1-dirty.sha256  app-40b6042-dirty-t1.sha256  app-40b6042-dirty.sha256  app-5aa3202-dirty-t1.sha256  app-5aa3202-dirty.sha256  app-d9ac388-dirty-t1.sha256  app-d9ac388-dirty.sha256  app-v1.2.6.sha256  app-v1.2.8-t1.sha256  app-v1.2.8.sha256  app-v2026.02.26-1-t1.sha256  app-v2026.02.26-1.sha256  app-v2026.02.26-2-t1.sha256  app-v2026.02.26-2.sha256  app-v2026.02.26-3-t1.sha256  app-v2026.02.26-3.sha256  app-v2026.02.26-4-t1.sha256  app-v2026.02.26-4.sha256  app-v2026.02.26-5-t1.sha256  app-v2026.02.26-5.sha256  app-v2026.02.26-6-t1.sha256  app-v2026.02.26-6.sha256  app-v2026.02.26-7-t1.sha256  app-v2026.02.26-7.sha256  latest.sha256  latest.version  version-map.txt
ota/gomoku/: app-5aa3202-dirty-t4.sha256  app-5aa3202-dirty.sha256  app-v1.2.8-t4.sha256  app-v1.2.8.sha256  latest.sha256
ota_bins/game/: app-v1.2.x.sha256  latest.sha256  targets.txt
ota_bins/game/chess/: app-5aa3202-dirty-t2.sha256  app-v1.2.8-t2.sha256  app-v1.2.8.sha256  latest.sha256  latest.version  version-map.txt
ota_bins/game/dice/: app-v1.2.8-t3.sha256  latest.sha256  latest.version  version-map.txt
ota_bins/game/go/: latest.sha256  version-map.txt
ota_bins/game/gomoku/: app-v1.2.8.sha256  latest.sha256  version-map.txt
ota_bins/stem/: app-v1.2.5-2-g457e087-dirty-5-g0b84616-dirty.sha256  app-v1.2.5.sha256  app-v1.2.6S.sha256  latest.sha256  latest.spiffs.sha256  latest.version
